--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multiparty": "^4.2.3",
     "next": "13.4.4",
     "next-connect": "^1.0.0-next.4",
+    "next-navigation": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1"
