--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.24.0",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -22,5 +23,8 @@
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.62.1"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
