--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.4",
     "formidable": "^3.2.5",
     "framer-motion": "^10.12.16",
+    "graphql-request": "^6.1.0",
     "multiparty": "^4.2.3",
     "next": "13.4.4",
     "next-connect": "^1.0.0-next.4",
